--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ Datasets/.DS_Store
 .DS_Store
 .~Data_Visualization__50889.twbr
 Datasets/.DS_Store
+Datasets/GoodPyramids.csv
+Datasets/resourcesgood.csv
